@@ -1,3 +1,7 @@
+20040222
+ - (dtucker) [auth-shadow.c auth.c auth.h] Move shadow account expiry test
+   to auth-shadow.c, no functional change.  ok djm@
+
 20040220
  - (djm) [openbsd-compat/setproctitle.c] fix comments; from grange@
 
@@ -1886,4 +1890,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3240 2004/02/20 09:37:44 djm Exp $
+$Id: ChangeLog,v 1.3241 2004/02/21 22:43:15 dtucker Exp $
